--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lucide-react": "^0.552.0",
     "motion": "^12.23.24",
     "next": "16.0.1",
-    "react": "19.2.0",
+    "react": "^19.2.0",
     "react-dom": "19.2.0",
     "react-insta-stories": "^2.8.0",
     "tailwind-merge": "^3.4.0"
