--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
     "motion": "^12.23.24",
-    "next": "16.0.1",
-    "react": "^19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-insta-stories": "^2.8.0",
     "tailwind-merge": "^3.4.0"
   },
@@ -26,7 +26,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.1.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
